--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -348,21 +348,33 @@
     "guests": "Guests",
     "invoiceNumber": "Invoice number",
     "paymentContent": "Payment content",
-    "paymentQrCode": "Payment QR Code",
-    "paymentNotification": "You can only pay in USD. If you are using VND currency, it will automatically convert to USD. Please enter the correct payment content!",
-    "qrCodeWillBeDisplayed": "QR Code will be displayed here",
-    "scanQrCode": "Please scan this QR code with your banking app to complete the transfer",
+    "paymentMethod": "Payment Method",
+    "paymentNotification": "Choose how you would like to pay. At the moment, only the Momo sandbox flow is available for simulation.",
+    "selectPaymentMethod": "Select your preferred method",
+    "availableNow": "Available",
+    "comingSoon": "Coming soon",
+    "momoDescription": "Use the official Momo sandbox flow to simulate a quick, secure wallet payment in seconds.",
+    "bankTransferLabel": "Bank transfer",
+    "bankTransferUnavailable": "Traditional bank transfers are temporarily unavailable while we finalize our verification process.",
+    "methodUnavailableNote": "This method is disabled right now",
+    "momoOnlyNote": "Momo is currently the only supported payment method for UITour sandbox transactions.",
+    "totalChargeLabel": "Total to be charged",
+    "initiateMomoPayment": "Continue with Momo",
+    "payUrlMissing": "Unable to open Momo because no payment link was returned.",
     "priceBreakdown": "Price Breakdown",
     "guest": "guest",
     "guests": "guests",
     "total": "Total",
     "back": "Back",
-    "confirmTransfer": "Confirm Transfer",
+    "confirmTransfer": "Confirm Momo Payment",
     "confirmed": "Confirmed",
     "paymentConfirmed": "Payment confirmed! Redirecting to your trips...",
     "loadingPaymentDetails": "Loading payment details...",
     "bookingIdNotFound": "Booking ID not found",
-    "failedToConfirmTransfer": "Failed to confirm transfer. Please try again."
+    "failedToConfirmTransfer": "Failed to confirm Momo payment. Please try again.",
+    "autoConfirmInProgress": "Hang tight! We are verifying your Momo payment...",
+    "autoConfirmFailed": "We could not verify the payment automatically. Please try again or contact support.",
+    "momoReturnedError": "Momo reported an error"
   },
   "adminDashboard": {
     "totalUsers": "Total users",
