--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -347,21 +347,33 @@
     "guests": "Khách",
     "invoiceNumber": "Mã hóa đơn",
     "paymentContent": "Nội dung thanh toán",
-    "paymentQrCode": "Mã QR thanh toán",
-    "paymentNotification": "Chỉ có thể thanh toán bằng USD, nếu bạn đang dùng loại tiền tệ VND thì nó sẽ tự động chuyển sang USD và vui lòng nhập đúng nội dung thanh toán!",
-    "qrCodeWillBeDisplayed": "Mã QR sẽ được hiển thị ở đây",
-    "scanQrCode": "Vui lòng quét mã QR này bằng ứng dụng ngân hàng của bạn để hoàn tất chuyển khoản",
+    "paymentMethod": "Phương thức thanh toán",
+    "paymentNotification": "Hãy chọn cách bạn muốn thanh toán. Hiện tại chỉ hỗ trợ mô phỏng ví Momo sandbox.",
+    "selectPaymentMethod": "Chọn phương thức mong muốn",
+    "availableNow": "Sẵn sàng",
+    "comingSoon": "Sắp ra mắt",
+    "momoDescription": "Sử dụng luồng Momo sandbox chính thức để mô phỏng thanh toán ví nhanh chóng và an toàn.",
+    "bankTransferLabel": "Chuyển khoản ngân hàng",
+    "bankTransferUnavailable": "Chuyển khoản truyền thống tạm thời chưa khả dụng trong khi chúng tôi hoàn thiện quy trình xác minh.",
+    "methodUnavailableNote": "Phương thức này đang bị vô hiệu",
+    "momoOnlyNote": "Hiện tại UITour sandbox chỉ hỗ trợ thanh toán thông qua Momo.",
+    "totalChargeLabel": "Tổng số tiền sẽ thanh toán",
+    "initiateMomoPayment": "Tiếp tục với Momo",
+    "payUrlMissing": "Không thể mở Momo vì chưa nhận được liên kết thanh toán.",
     "priceBreakdown": "Chi tiết giá",
     "guest": "khách",
     "guests": "khách",
     "total": "Tổng",
     "back": "Quay lại",
-    "confirmTransfer": "Xác nhận chuyển khoản",
+    "confirmTransfer": "Xác nhận thanh toán Momo",
     "confirmed": "Đã xác nhận",
     "paymentConfirmed": "Thanh toán đã được xác nhận! Đang chuyển đến chuyến đi của bạn...",
     "loadingPaymentDetails": "Đang tải chi tiết thanh toán...",
     "bookingIdNotFound": "Không tìm thấy mã đặt chỗ",
-    "failedToConfirmTransfer": "Không thể xác nhận chuyển khoản. Vui lòng thử lại."
+    "failedToConfirmTransfer": "Không thể xác nhận thanh toán Momo. Vui lòng thử lại.",
+    "autoConfirmInProgress": "Hệ thống đang xác minh thanh toán Momo của bạn...",
+    "autoConfirmFailed": "Không thể xác minh tự động. Vui lòng thử lại hoặc liên hệ hỗ trợ.",
+    "momoReturnedError": "Momo báo lỗi"
   },
   "adminDashboard": {
     "totalUsers": "Tổng người dùng",
