--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -111,7 +111,10 @@
     "done": "Hoàn tất",
     "cancel": "Hủy",
     "failedToSaveProfile": "Không thể lưu hồ sơ",
-    "missingLoginInfoEdit": "Thiếu thông tin đăng nhập. Vui lòng đăng nhập lại."
+    "missingLoginInfoEdit": "Thiếu thông tin đăng nhập. Vui lòng đăng nhập lại.",
+    "uploadAvatar": "Cập nhật ảnh đại diện",
+    "removeAvatar": "Xóa hình đại diện"
+    
   },
   "accountSettings": {
     "title": "Cài đặt tài khoản",
