--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -392,8 +392,8 @@
     "monthRevenue": "Doanh thu tháng này",
     "unresolvedReports": "Báo cáo chưa xử lý",
     "clickToView": "Click để xem chi tiết →",
-    "revenueByMonth": "Doanh thu theo tháng (mock)",
-    "userGrowth": "Tăng trưởng người dùng (mock)",
+    "revenueByMonth": "Doanh thu theo tháng",
+    "userGrowth": "Tăng trưởng người dùng ",
     "latestReports": "Báo cáo mới nhất",
     "reporter": "Người báo cáo",
     "reason": "Lý do",
