automation test result

--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -393,8 +393,8 @@
     "monthRevenue": "Revenue this month",
     "unresolvedReports": "Unresolved reports",
     "clickToView": "Click to view details →",
-    "revenueByMonth": "Revenue by month (mock)",
-    "userGrowth": "User growth (mock)",
+    "revenueByMonth": "Revenue by month",
+    "userGrowth": "User growth",
     "latestReports": "Latest reports",
     "reporter": "Reporter",
     "reason": "Reason",
